--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,7 +8,9 @@ trigger:
 
 pool:
   name: Default
-  demands: Agent.Name -equals OTX-6VFZ314
+  demands: 
+  - Agent.Name -equals OTX-6VFZ314
+  - Agent.Version -equals 3.245.0
 steps:
 - task: Maven@3
   inputs:
