--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,6 +8,7 @@ trigger:
 variables:
   system.debug: true
   NODE_DEBUG: request
+  maven: C:\Users\arathod3\Downloads\apache-maven-3.9.6-bin\apache-maven-3.9.6
 
 pool:
   name: Default
