Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,6 +9,7 @@ variables:
   system.debug: true
   NODE_DEBUG: request
   maven: C:\Users\arathod3\Downloads\apache-maven-3.9.6-bin\apache-maven-3.9.6
+  NODE_TLS_REJECT_UNAUTHORIZED: 0
 
 pool:
   name: Default
