--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,6 +7,7 @@ trigger:
 - master
 variables:
   system.debug: true
+  Agent.Diagnostic: true
   maven: C:\Users\arathod3\Downloads\apache-maven-3.9.6-bin\apache-maven-3.9.6
   NODE_TLS_REJECT_UNAUTHORIZED: 0
 
