Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,7 +28,7 @@ steps:
 
     downloadDebugLogs: true
 
-    debugLogFileName: 'myfilediag.zip'
+    debugLogFileName: 'SastPipelineDiagnosticFile'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
