Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -31,6 +31,10 @@ steps:
     downloadDebugLogs: true
     debugLogFileName: 'SastPipelineDiagnosticFile'
 
+- task: FortifyScanCentralSAST@9
+  inputs:
+    scanCentralClientToken: '$(ScanCentral.ClientToken)'
+    sscCiToken: '$(ScanCentral.SscCiToken)'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
