--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -10,6 +10,12 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: FortifyScanCentralSAST@9
+  inputs:
+    scanCentralClientToken: '$(ScanCentral.ClientToken)'
+    sscUrl: 'https://ssc.demo.fortify.com'
+    sscCiToken: '$(ScanCentral.SscCiToken)'
+    buildTool: 'mvn'
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
