--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -3,8 +3,6 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-trigger:
-- master
 variables:
   system.debug: true
   Agent.Diagnostic: true
@@ -18,7 +16,9 @@ steps:
     sscUrl: 'https://ssc.demo.fortify.com'
     sscCiToken: '$(ScanCentral.SscCiToken)'
     buildTool: 'mvn'
+    downloadDebugLogs: true
 
+    
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
