--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -30,6 +30,8 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+    buildFile: './pom.xml'
+
 
 - task: FortifyScanCentralSAST@10
   inputs:
